# voidwalker.py

./: .gitignore  BUILD_GUIDE.md  MANIFEST.in  README.md  pyproject.toml  voidwalker.py
docker/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  entrypoint.sh  provision.py
docker/config/: htb  htb.tmux.conf  htb.zshrc
docs/: index.html
docs/superpowers/specs/: 2026-07-02-kali-htb-docker-design.md
voidwalker/: __init__.py  __main__.py  _core_methods.py  cli.py  core.py  download.py  hostinfo.py  installers.py  search.py  selftest.py  theme.py  ui.py  vault.py  version.py  xplat.py
voidwalker/data/: binaries.py  build_targets.py  catalog.py  packages.py  sources.py  workspace.py
voidwalker/integrations/: __init__.py  bloodhound.py  kali.py  penv.py  proxy.py  recorder.py  rootsetup.py
voidwalker/integrations/assets/pentest-env/: .gitignore  UPSTREAM_README.md  install.sh
voidwalker/integrations/assets/pentest-env/config/: config.sh  schema.sql
voidwalker/integrations/assets/pentest-env/config/alacritty/: alacritty.toml
voidwalker/integrations/assets/pentest-env/config/cheatsheets/: env.md  htb-workflow.md  linux-privesc.md  nmap.md  shells.md  smb.md
voidwalker/integrations/assets/pentest-env/config/guide/: ad-windows.html  htb-workflow.html  index.html  pe.html  privesc.html  recon.html  tmux.html  toolbox.html  transfer.html  web.html  zsh-terminal.html
voidwalker/integrations/assets/pentest-env/config/lib/: backup.sh  cheat.sh  cred.sh  db.sh  doctor.sh  flag.sh  guide.sh  host.sh  note.sh  target.sh  (+2 more)
(+32 files in other folders)
